--- a/src/app/guest/register/register.component.css
+++ b/src/app/guest/register/register.component.css
@@ -1,6 +1,10 @@
-/* You can add global styles to this file, and also import other style files */
-@import "~bootstrap/dist/css/bootstrap.min.css";
 
+:host{
+    height: 100vh;
+    display: block;
+    background-color: #f5dd61;
+    border: 1px solid #f5dd61;
+}
 
 
 .custom-card{
